[package]
name          = "dex"
description   = "Example dex to use dynamic link"
version       = "0.1.0"
edition       = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
cw-utils        = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
